# govern-cli

./: LICENSE  README.md  govern_single_file.py  pyproject.toml
govern_cli/: checks.py  cli.py  engine.py
tests/: test_checks.py
