[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "govern-cli"
version = "0.1.0"
description = "Governance gate for long-horizon agent deliverables: independently verify that claimed deliverables actually exist, validate, run, and don't regress."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "govern-cli contributors"}]
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
govern = "govern_cli.cli:main"

[tool.setuptools.packages.find]
include = ["govern_cli*"]
